# fractol

./: CMakeLists.txt  Makefile  fract_bonus.c  fract_error.c  fract_event.c  fract_get_set.c  fract_print.c  fractol.h  main.c
libft/: libft.h
minilibx/: a.out  main.c
